--- a/environment.yaml
+++ b/environment.yaml
@@ -1,18 +1,111 @@
 name: tdmpc
 channels:
+  - conda-forge
   - defaults
 dependencies:
-  - python=3.8
-  - pytorch=1.9
-  - torchvision
-  - cudatoolkit=11.1
-  - pip
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - bzip2=1.0.8=h4bc722e_7
+  - ca-certificates=2025.7.14=hbd8a1cb_0
+  - icu=75.1=he02047a_0
+  - ld_impl_linux-64=2.44=h1423503_1
+  - libffi=3.4.6=h2dba641_1
+  - libgcc=15.1.0=h767d61c_3
+  - libgcc-ng=15.1.0=h69a702a_3
+  - libgomp=15.1.0=h767d61c_3
+  - liblzma=5.8.1=hb9d3cd8_2
+  - liblzma-devel=5.8.1=hb9d3cd8_2
+  - libnsl=2.0.1=hb9d3cd8_1
+  - libsqlite=3.50.3=hee844dc_1
+  - libstdcxx=15.1.0=h8f9b012_3
+  - libstdcxx-ng=15.1.0=h4852527_3
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libzlib=1.3.1=hb9d3cd8_2
+  - ncurses=6.5=h2d0b736_3
+  - openssl=3.5.1=h7b32b05_0
+  - python=3.8.20=h4a871b0_2_cpython
+  - readline=8.2=h8c095d6_2
+  - tk=8.6.13=noxft_hd72426e_102
+  - wheel=0.45.1=pyhd8ed1ab_0
+  - xz=5.8.1=hbcc6ac9_2
+  - xz-gpl-tools=5.8.1=hbcc6ac9_2
+  - xz-tools=5.8.1=hb9d3cd8_2
   - pip:
-    - termcolor
-    - omegaconf
-    - gym==0.21.0
-    - dm-control==0.0.403778684
-    - pandas
-    - wandb
-    - moviepy
-    - imageio
+      - absl-py==2.3.1
+      - annotated-types==0.7.0
+      - antlr4-python3-runtime==4.9.3
+      - certifi==2025.7.14
+      - charset-normalizer==3.4.2
+      - click==8.1.8
+      - cloudpickle==3.1.1
+      - decorator==4.4.2
+      - dm-control==0.0.403778684
+      - dm-env==1.6
+      - dm-tree==0.1.8
+      - eval-type-backport==0.2.2
+      - filelock==3.16.1
+      - fsspec==2025.3.0
+      - future==1.0.0
+      - gitdb==4.0.12
+      - gitpython==3.1.45
+      - glfw==2.9.0
+      - gym==0.22.0
+      - gym-notices==0.0.8
+      - h5py==3.11.0
+      - idna==3.10
+      - imageio==2.35.1
+      - imageio-ffmpeg==0.5.1
+      - importlib-metadata==8.5.0
+      - jinja2==3.1.6
+      - labmaze==1.0.6
+      - lxml==6.0.0
+      - markupsafe==2.1.5
+      - moviepy==1.0.3
+      - mpmath==1.3.0
+      - networkx==3.1
+      - numpy==1.21.6
+      - nvidia-cublas-cu12==12.1.3.1
+      - nvidia-cuda-cupti-cu12==12.1.105
+      - nvidia-cuda-nvrtc-cu12==12.1.105
+      - nvidia-cuda-runtime-cu12==12.1.105
+      - nvidia-cudnn-cu12==9.1.0.70
+      - nvidia-cufft-cu12==11.0.2.54
+      - nvidia-curand-cu12==10.3.2.106
+      - nvidia-cusolver-cu12==11.4.5.107
+      - nvidia-cusparse-cu12==12.1.0.106
+      - nvidia-nccl-cu12==2.20.5
+      - nvidia-nvjitlink-cu12==12.9.86
+      - nvidia-nvtx-cu12==12.1.105
+      - omegaconf==2.3.0
+      - packaging==25.0
+      - pandas==2.0.3
+      - pillow==10.4.0
+      - pip==23.3.2
+      - platformdirs==4.3.6
+      - proglog==0.1.12
+      - protobuf==5.29.5
+      - pydantic==2.10.6
+      - pydantic-core==2.27.2
+      - pyopengl==3.1.9
+      - pyparsing==3.1.4
+      - python-dateutil==2.9.0.post0
+      - pytz==2025.2
+      - pyyaml==6.0.2
+      - requests==2.32.4
+      - scipy==1.10.1
+      - sentry-sdk==2.33.2
+      - setuptools==65.5.0
+      - six==1.17.0
+      - smmap==5.0.2
+      - sympy==1.13.3
+      - termcolor==2.4.0
+      - torch==2.4.1
+      - torchvision==0.19.1
+      - tqdm==4.67.1
+      - triton==3.0.0
+      - typing-extensions==4.13.2
+      - tzdata==2025.2
+      - urllib3==2.2.3
+      - wandb==0.21.0
+      - zipp==3.20.2
